--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <viz-flowchart>
       <viz-actor id="user">User</viz-actor>
       <viz-actor id="frontend">Frontend</viz-actor>
-      <viz-actor id="tenent">auth0 Tenent</viz-actor>
+      <viz-actor id="tenent">Auth Server</viz-actor>
       <viz-actor id="api">API</viz-actor>
     
       <viz-step from="user" to="frontend">
@@ -35,6 +35,7 @@
     <script>
       // ?module -> built es module
       // ?iife -> vanilla javascript
+      // ?preact -> test with preact vdom
       const script = document.createElement('script')
       script.type = 'text/javascript'
       const mode = window.location.search.split('?')[1]
@@ -46,6 +47,10 @@
           break;
         case 'iife':
           script.src = '/dist/viz-flowchart.js'
+          break;
+        case 'preact':
+          script.type = 'module'
+          script.src = '/test/preact.js'
           break;
         default:
           script.type = 'module'
